[project]
name = "state"
version = "0.1.0"
description = "Exercice de mise en pratique du patron de conception State"
readme = "README.md"
authors = [
    { name = "Vincent Archambault-Bouffard", email = "varchambaultbouffard@cmaisonneuve.qc.ca" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
main = "state:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
